# HLS-scraper

./: .gitignore  LICENSE  README.md  mypy.ini  pyproject.toml
.github/workflows/: main.yml
hls_dump/: 22_10_22_flair_locations_base.csv  22_10_22_flair_locations_base_gmaps.csv  Cleaning.ipynb  hist_hub.py
hlsscraper/: __init__.py  scraper.py
hlsscraper/locators/: article.py  person.py  place.py
hlsscraper/pages/: article.py  family.py  logging_utils.py  open_data.py  person.py  place.py
src/: scraper.py
src/locators/: __init__.py  family.py  open_data.py  person.py
src/pages/: __init__.py  article.py  family.py  open_data.py  person.py  place.py
tests/: test_base.py  test_family.py  test_opendata.py  test_person.py  test_person_2.py  test_person_3.py  test_person_4.py  test_person_5.py  test_person_6.py  test_person_7.py  test_place.py
tests/mocks/: mock_Family.html  mock_OpenData.html  mock_Person.html  mock_Person_2.html  mock_Person_3.html  mock_Person_4.html  mock_Person_5.html  mock_Person_6.html  mock_Person_7.html  mock_Place.html
