[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hlsscraper"
version = "0.0.1"
description = ""
authors = [
    "Jorit Studer <jorit.studer@gmail.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
MechanicalSoup = "^1.2.0"
pandas = "^1.5"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = "^0.982"
pre-commit = "^2.20.0"
pytest = "^7.1.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.16.1"

[tool.isort]
profile = "black"
